--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "webpack && node index.js"
   },
   "repository": {
     "type": "git",
@@ -17,9 +17,24 @@
     "url": "https://github.com/alexandre-roitman/psprice/issues"
   },
   "homepage": "https://github.com/alexandre-roitman/psprice#readme",
+  "babel": {
+    "presets": [
+      "es2015",
+      "react",
+      "stage-2"
+    ]
+  },
   "dependencies": {
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-2": "^6.13.0",
     "express": "^4.14.0",
     "lodash": "^4.15.0",
-    "request": "^2.74.0"
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
+    "request": "^2.74.0",
+    "webpack": "^1.13.2"
   }
 }
