--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-2": "^6.13.0",
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "firebase": "^3.3.1",
     "lodash": "^4.15.0",
